# Chatbot

./: .gitignore  build.sh  custom_ollama_installer.sh  docker-compose.yaml
backend/: Dockerfile  go.mod  go.sum  main.go
backend/api/: data.go  delete.go  get.go  inference.go  ml_pipeline.go  post.go  put.go  upload.go
backend/auth/: auth.go  data.go  login.go
backend/db/: data.go  delete.go  exists.go  get.go  insert.go  model.go  setup.go  update.go
developer/src/: docker_installation.md  ollama_installation_guide.md  setup_nvidia_gpu.md
frontend/: Dockerfile  admin_dashboard.py  chatbot.py  data.py  login.py  main.py  signup.py
ml_pipeline/: Cargo.toml  Dockerfile  check_connection.sh
ml_pipeline/src/: lib.rs  main.rs  text_processing.rs
ml_pipeline/src/db/: chunks.rs  delete_user.rs  message.rs  mod.rs
ml_pipeline/src/documents/: chunk_text.rs  delete.rs  mod.rs  normalization.rs  process_pdf.rs
ml_pipeline/src/files/: file.rs  filesystem.rs  mod.rs
ml_pipeline/src/message/: delete.rs  history.rs  inference.rs  mod.rs  upload.rs
ml_pipeline/src/reasoning/: deep_think.rs  mod.rs  normal.rs
