[package]
name = "ml_pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", features = ["macros"]}
fastembed = {version = "4.9.0", default-features = true}
lingua = {version = "1.7.2", default-features = false, features = ["german", "english", "chinese"]}
lopdf = "0.36.0"
rake = "0.3.6"
rand = "0.9.1"
reqwest = { version = "0.12.19", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_repr = "0.1.20"
surrealdb = { version = "2", features = ["allocator", "kv-mem","protocol-http", "protocol-ws", "rustls"] }
tokio = {version = "1.45.1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"]}
tower-http = { version = "0.6.5", features = ["trace"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features=["env-filter"]}

[features]
build = []


[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
